--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/arrays.xml
@@ -9,7 +9,7 @@
         <item>Școală pregătitoare</item>
         <item>Liceu</item>
         <item>Școală de meserii</item>
-        <item>Facultate</item>
+        <item>"Licențiat"</item>
         <item>"Masterat"</item>
         <item>"Doctorat"</item>
     </string-array>
