--- a/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/plurals.xml
@@ -265,8 +265,8 @@
         <item quantity="one">Colectați &lt;font color=#fc7050>&lt;b>%d&lt;/b>&lt;/font> mai multe bijuterii pentru a participa la tombolă</item>
     </plurals>
     <plurals name="clockin_days">
-        <item quantity="other">Ziua %1$s</item>
-        <item quantity="one">Ziua %1$s</item>
+        <item quantity="other">Completat %1$s zile la rând</item>
+        <item quantity="one">Completat %1$s zi</item>
     </plurals>
     <plurals name="clockin_new_chip">
         <item quantity="other">Ați obținut&lt;font color=#faea47>&lt;b>%d&lt;/b>&lt;/font> puncte</item>
