--- a/Romanian/main/Mms.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/arrays.xml
@@ -15,12 +15,12 @@
         <item>Relație</item>
      </string-array> 
     <string-array name="resent_via_entries_sms">
-        <item>Prin mesaj</item>
-        <item>Prin mesaj Cloud</item>
+        <item>SMS</item>
+        <item>Mesaj Mi</item>
        </string-array>
     <string-array name="resent_via_entries_mms">
-        <item>Prin mesaj</item>
-        <item>Prin mesaj Cloud</item>
+        <item>SMS</item>
+        <item>Mesaj Mi</item>
      </string-array> 
     <string-array name="entries_sms_validity_period">
         <item>Nu este setat</item>
@@ -39,7 +39,7 @@
         <item>Sincronizați mesajele de pe cartela SIM selectată</item>
     </string-array>
     <string-array name="switch_sdk">
-        <item>Serviciul de mesagerie inteligentă Xiaomi</item>
+        <item>Mesagerie Mi</item>
         <item>Serviciul de mesagerie inteligentă CMCC</item>
     </string-array>
     <string-array name="select_dialog_items">
