--- a/Romanian/main/Weather.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/arrays.xml
@@ -87,8 +87,8 @@
         <item></item>
      </string-array>
     <string-array name="indices_uv_level">
-        <item>Slab</item>
-        <item>Mediu</item>
+        <item>Scăzut</item>
+        <item>Moderat</item>
         <item>Ridicat</item>
     </string-array>
     <string-array name="indices_sport">
