--- a/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/arrays.xml
@@ -59,6 +59,6 @@
         <item>Dispunere</item>
     </string-array>
     <string-array name="quality_business_devices">
-        <item>Litiu</item>
+        <item>litiu</item>
     </string-array>
 </resources>
