--- a/Romanian/main/MiGalleryLockscreen.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/MiGalleryLockscreen.apk/res/values-ro/plurals.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="lockscreen_magazine_subscribe">
-        <item quantity="other">%1$s urmăritori</item>
-        <item quantity="one">%1$s urmăritor</item>
+        <item quantity="other">%1$s persoane abonate</item>
+        <item quantity="one">%1$s persoană abonată</item>
     </plurals>
     <plurals name="lockscreen_magazine_system_subscribe">
         <item quantity="other">%1$s imagini de fundal</item>
