--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -14,12 +14,12 @@
         <item>Toate</item>
      </string-array>
     <string-array name="screen_timeout_entries">
-        <item>15 secunde</item>
-        <item>30 de secunde</item>
-        <item>1 minut</item>
-        <item>2 minute</item>
-        <item>5 minute</item>
-        <item>10 minute</item>
+        <item>După 15 secunde</item>
+        <item>După 30 de secunde</item>
+        <item>După 1 minut</item>
+        <item>După 2 minute</item>
+        <item>După 5 minute</item>
+        <item>După 10 minute</item>
         <item>Niciodată</item>
      </string-array>
     <string-array name="dream_timeout_entries">
@@ -788,10 +788,10 @@ Notă: Doar pentru Ubuntu 8.04!"</item>
     </string-array>
     <string-array name="lock_screen_secure_after_timeout_entries">
         <item>Imediat</item>
-        <item>30 de secunde</item>
-        <item>1 minut</item>
-        <item>2 minute</item>
-        <item>5 minute</item>
+        <item>După 30 de secunde</item>
+        <item>După 1 minut</item>
+        <item>După 2 minute</item>
+        <item>După 5 minute</item>
         <item>Niciodată</item>
     </string-array>
     <string-array name="fluency_mode_entries">
