--- a/Romanian/main/Weather.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/plurals.xml
@@ -16,4 +16,16 @@
         <item quantity="other">Senin</item>
         <item quantity="one">Senin</item>
     </plurals>
+    <plurals name="total_voted_num_text">
+        <item quantity="other">"&lt;font color='#20a7ff'>%1$s&lt;/font> persoane au votat"</item>
+        <item quantity="one">"&lt;font color='#20a7ff'>%1$s&lt;/font> persoană a votat"</item>
+    </plurals>
+    <plurals name="yes_vote_num">
+        <item quantity="other"> | %1$s persoane</item>
+        <item quantity="one"> | %1$s persoană</item>
+    </plurals>
+    <plurals name="no_vote_num">
+        <item quantity="other">%1$s persoane | </item>
+        <item quantity="one">%1$s persoană | </item>
+    </plurals>
 </resources>
