--- a/Romanian/main/Calendar.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/plurals.xml
@@ -51,4 +51,24 @@
         <item quantity="other">zile rămase</item>
         <item quantity="one">zi rămasă</item>
     </plurals>
+    <plurals name="work_days">
+        <item quantity="other">%d zile lucrătoare</item>
+        <item quantity="one">%d zi lucrătoare</item>
+    </plurals>
+    <plurals name="date_calculate_direction_forward">
+        <item quantity="other">cu %1$d zile înainte</item>
+        <item quantity="one">cu %1$d zi înainte</item>
+    </plurals>
+    <plurals name="date_calculate_direction_backward">
+        <item quantity="other">după %1$d zile</item>
+        <item quantity="one">după %1$d zi</item>
+    </plurals>
+    <plurals name="date_calculate_days_ago">
+        <item quantity="other">cu %1$d zile înainte</item>
+        <item quantity="one">cu %1$d zi înainte</item>
+    </plurals>
+    <plurals name="date_calculate_days_after">
+        <item quantity="other">peste %1$d zile</item>
+        <item quantity="one">peste %1$d zi</item>
+    </plurals>
 </resources>
