--- a/Romanian/main/Calendar.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/plurals.xml
@@ -39,17 +39,37 @@
         <item quantity="other">Aniversare: %2$d ani de la %1$s în 3 zile</item>
         <item quantity="one">Aniversare: %2$d an de la %1$s în 3 zile</item>
     </plurals>
+    <plurals name="birthday_notification_age_term">
+        <item quantity="other">%1$s ani</item>
+        <item quantity="one">%1$s an</item>
+    </plurals>
+    <plurals name="repeat_interval_frequency_day_multiple">
+        <item quantity="other">%1$d zile</item>
+        <item quantity="one">%1$d zi</item>
+    </plurals>
+    <plurals name="repeat_interval_frequency_week_multiple">
+        <item quantity="other">%1$d săptămâni</item>
+        <item quantity="one">%1$d săptămână</item>
+    </plurals>
+    <plurals name="repeat_interval_frequency_month_multiple">
+        <item quantity="other">%1$d luni</item>
+        <item quantity="one">%1$d lună</item>
+    </plurals>
+    <plurals name="repeat_interval_frequency_year_multiple">
+        <item quantity="other">%1$d ani</item>
+        <item quantity="one">%1$d an</item>
+    </plurals>
     <plurals name="anniversary_year">
-        <item quantity="other">ani</item>
-        <item quantity="one">an</item>
+        <item quantity="other">%1$s ani</item>
+        <item quantity="one">%1$s an</item>
     </plurals>
     <plurals name="anniversary_day">
-        <item quantity="other">zile</item>
-        <item quantity="one">zi</item>
+        <item quantity="other">%1$s zile</item>
+        <item quantity="one">%1$s zi</item>
     </plurals>
     <plurals name="countdown_day">
-        <item quantity="other">zile rămase</item>
-        <item quantity="one">zi rămasă</item>
+        <item quantity="other">%1$s zile rămase</item>
+        <item quantity="one">%1$s zi rămasă</item>
     </plurals>
     <plurals name="work_days">
         <item quantity="other">%d zile lucrătoare</item>
