--- a/Romanian/main/CleanMaster.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/plurals.xml
@@ -89,4 +89,16 @@
         <item quantity="other">(%1$d fișiere goale) %2$s</item>
         <item quantity="one">(%1$d fișier gol) %2$s</item>
     </plurals>
+    <plurals name="app_usage_day">
+        <item quantity="other">"Nu a fost utilizată de %d zile"</item>
+        <item quantity="one">"Nu a fost utilizată %d zi"</item>
+    </plurals>
+    <plurals name="app_usage_month">
+        <item quantity="other">"Nu a fost utilizată de %d luni"</item>
+        <item quantity="one">"Nu a fost utilizată de %d lună"</item>
+    </plurals>
+    <plurals name="app_usage_year">
+        <item quantity="other">"Nu a fost utilizată de %d ani"</item>
+        <item quantity="one">"Nu a fost utilizată de %d an"</item>
+    </plurals>
 </resources>
