--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="switch_apps_entries">
         <item>Utilizată în spațiul principal</item>
-        <item>Utilizată în spațiul secundar</item>
+        <item>Utilizată în spațiul curent</item>
         <item>Utilizată în ambele spații</item>
     </string-array>
     <string-array name="switch_apps_title_confirms">
@@ -12,7 +12,7 @@
     </string-array>
     <string-array name="switch_apps_msg_confirms">
         <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul principal.</item>
-        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul secundar.</item>
+        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul curent.</item>
         <item>Aplicațiile sunt utilizate în ambele spații.</item>
     </string-array>
 </resources>
