--- a/Romanian/main/DeskClock.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-     <string-array name="alarm_in_furture">
+    <string-array name="alarm_in_furture">
         <item>Alarmă în mai puțin de un minut</item>
         <item>Alarmă în %1$s</item>
         <item>Alarmă în %2$s</item>
@@ -18,7 +18,7 @@
     </string-array>
     <string-array name="alarm_repeat_type">
         <item>O dată</item>
-        <item>În fiecare zi</item>
+        <item>Zilnic</item>
         <item>În zilele lucrătoare</item>
         <item>În zilele nelucrătoare</item>
         <item>De Lu - Vi</item>
