--- a/Romanian/main/miuisystem.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/miuisystem.apk/res/values-ro/arrays.xml
@@ -6,11 +6,11 @@
         <item>modifice SMS-uri</item>
         <item>recepționeze SMS-uri</item>
         <item>trimită SMS-uri</item>
-        <item>ințieze apeluri</item>
+        <item>inițieze apeluri</item>
         <item>citească agenda</item>
         <item>modifice contacte</item>
-        <item>citească registrul de apelare</item>
-        <item>modifice registrul de apelare</item>
+        <item>citească istoricul de apelare</item>
+        <item>modifice istoricul de apelare</item>
         <item>acceseze camera foto</item>
         <item>acceseze locația</item>
     </string-array>
