--- a/Romanian/main/PowerKeeper.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/PowerKeeper.apk/res/values-ro/arrays.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="group_name">
+        <item>normal</item>
+        <item>ascuns</item>
+        <item>citire</item>
+        <item>multimedia</item>
+    </string-array>
     <string-array name="group_name_translate">
         <item>Prestabilit</item>
         <item>Mod Ascuns</item>
@@ -15,7 +21,7 @@
         <item>Ieşire din ecran complet</item>
         <item>Aplicaţia se execută în fundal</item>
         <item>Telefonul se încarcă</item>
-        <item>Telefonul nu se încarcă</item>
+        <item>"Telefonul nu se încarcă"</item>
         <item>Telefonul este inactiv</item>
     </string-array>
     <string-array name="action_name_translate">
