--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -1,5 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="wifi_status">
+        <item></item>
+        <item>Scanare…</item>
+        <item>Conectare…</item>
+        <item>Autentificare…</item>
+        <item>Obținere adresă IP…</item>
+        <item>Conectat</item>
+        <item>Suspendat</item>
+        <item>Deconectare…</item>
+        <item>Deconectat</item>
+        <item>Fără succes</item>
+        <item>Blocat</item>
+        <item>Se evită temporar conexiunile slabe</item>
+    </string-array>
+    <string-array name="wifi_status_with_ssid">
+        <item></item>
+        <item>Scanare…</item>
+        <item>Conectare la %1$s…</item>
+        <item>Autentificare cu %1$s…</item>
+        <item>Obținere adresă IP de la %1$s…</item>
+        <item>Conectat la %1$s</item>
+        <item>Suspendat</item>
+        <item>Deconectare de la %1$s…</item>
+        <item>Deconectat</item>
+        <item>Fără succes</item>
+        <item>Blocat</item>
+        <item>Se evită temporar conexiunile slabe</item>
+    </string-array>
+    <string-array name="hdcp_checking_titles">
+        <item>Nu verifica niciodată</item>
+        <item>Verifică doar conținutul DRM</item>
+        <item>Verifică întotdeauna</item>
+    </string-array>
+    <string-array name="hdcp_checking_summaries">
+        <item>Nu utiliza niciodată verificarea HDCP</item>
+        <item>Utilizați verificarea HDCP doar pentru conținutul DRM</item>
+        <item>Utilizați întotdeauna verificarea HDCP</item>
+    </string-array>
+    <string-array name="select_logd_size_titles">
+        <item>Oprit</item>
+        <item>64 K</item>
+        <item>256 K</item>
+        <item>1 M</item>
+        <item>4 M</item>
+        <item>16 M</item>
+    </string-array>
+    <string-array name="select_logd_size_lowram_titles">
+        <item>Oprit</item>
+        <item>64 K</item>
+        <item>256 K</item>
+        <item>1 M</item>
+    </string-array>
+    <string-array name="select_logd_size_summaries">
+        <item>Oprit</item>
+        <item>64K per jurnal tampon</item>
+        <item>256K per jurnal tampon</item>
+        <item>1M per jurnal tampon</item>
+        <item>4M per jurnal tampon</item>
+        <item>16M per jurnal tampon</item>
+    </string-array>
+    <string-array name="window_animation_scale_entries">
+        <item>Animație oprită</item>
+        <item>Animație la scara 0,5x</item>
+        <item>Animație la scara  1x</item>
+        <item>Animație la scara  1,5x</item>
+        <item>Animație la scara 2x</item>
+        <item>Animație la scara  5x</item>
+        <item>Animație la scara  10x</item>
+    </string-array>
+    <string-array name="transition_animation_scale_entries">
+        <item>Animație oprită</item>
+        <item>Animație la scara 0,5x</item>
+        <item>Animație la scara  1x</item>
+        <item>Animație la scara  1,5x</item>
+        <item>Animație la scara  2x</item>
+        <item>Animație la scara  5x</item>
+        <item>Animație la scara  10x</item>
+    </string-array>
+    <string-array name="animator_duration_scale_entries">
+        <item>Animație oprită</item>
+        <item>Animație la scara 0,5x</item>
+        <item>Animație la scara  1x</item>
+        <item>Animație la scara  1,5x</item>
+        <item>Animație la scara  2x</item>
+        <item>Animație la scara  5x</item>
+        <item>Animație la scara  10x</item>
+    </string-array>
+    <string-array name="overlay_display_devices_entries">
+        <item>Niciuna</item>
+        <item>480p</item>
+        <item>480p (securizat)</item>
+        <item>720p</item>
+        <item>720p (securizat)</item>
+        <item>1080p</item>
+        <item>1080p (securizat)</item>
+        <item>4K</item>
+        <item>4K (securizat)</item>
+        <item>4K (scalat)</item>
+        <item>4K (scalat, securizat)</item>
+        <item>720p, 1080p (ecran scindat)</item>
+    </string-array>
+    <string-array name="enable_opengl_traces_entries">
+        <item>Niciunul</item>
+        <item>Logcat</item>
+        <item>Systrace (Grafică)</item>
+        <item>Call stack on glGetError</item>
+    </string-array>
+    <string-array name="show_non_rect_clip_entries">
+        <item>Oprit</item>
+        <item>Desenează decupările nerectangulare în albastru</item>
+        <item>Evidențiază comenzile de desenare în verde</item>
+    </string-array>
+    <string-array name="track_frame_time_entries">
+        <item>Oprit</item>
+        <item>Pe ecran, ca bare</item>
+        <item>In adb shell dumpsys gfxinfo</item>
+    </string-array>
+    <string-array name="debug_hw_overdraw_entries">
+        <item>Oprit</item>
+        <item>Arată zonele suprapuse</item>
+        <item>Arată zonele cu Deuteranomalie</item>
+    </string-array>
+    <string-array name="app_process_limit_entries">
+        <item>Limita standard</item>
+        <item>Niciun proces de fundal</item>
+        <item>Cel mult 1 proces</item>
+        <item>Cel mult 2 procese</item>
+        <item>Cel mult 3 procese</item>
+        <item>Cel mult 4 procese</item>
+    </string-array>
+    <string-array name="usb_configuration_titles">
+        <item>Încărcare</item>
+        <item>MTP (Media Transfer Protocol)</item>
+        <item>PTP (Picture Transfer Protocol)</item>
+        <item>RNDIS (USB Ethernet)</item>
+        <item>Sursă audio</item>
+        <item>MIDI</item>
+    </string-array>
+    <string-array name="tts_rate_entries">
+        <item>Foarte lent</item>
+        <item>Lent</item>
+        <item>Normal</item>
+        <item>Rapid</item>
+        <item>Mai rapid</item>
+        <item>Foarte rapid</item>
+        <item>Rapid</item>
+        <item>Foarte rapid</item>
+        <item>Cel mai rapid</item>
+    </string-array>
+    <string-array name="color_mode_names">
+        <item>Vibrant (implicit)</item>
+        <item>Natural</item>
+        <item>Standard</item>
+    </string-array>
+    <string-array name="color_mode_descriptions">
+        <item>Culori vii</item>
+        <item>Culori naturale, așa cum sunt percepute de ochiul uman</item>
+        <item>Culori optimizate pentru conținut digital</item>
+    </string-array>
+    <string-array name="battery_labels">
+        <item>0 %</item>
+        <item>50 %</item>
+        <item>100 %</item>
+    </string-array>
     <string-array name="status_bar_style_entries">
         <item>Combinate</item>
         <item>Separate</item>
@@ -187,15 +351,29 @@
         <item>IPv4/IPv6</item>
      </string-array>
     <string-array name="bearer_entries">
-        <item>LTE</item>
-        <item>eHRPD</item>
         <item>Nespecificat</item>
+        <item>LTE</item>
+        <item>HSPAP</item>
+        <item>HSPA</item>
+        <item>HSUPA</item>
+        <item>HSDPA</item>
+        <item>UMTS</item>
+        <item>EDGE</item>
+        <item>GPRS</item>
+        <item>eHRPD</item>
+        <item>EVDO_B</item>
+        <item>EVDO_A</item>
+        <item>EVDO_0</item>
+        <item>1xRTT</item>
+        <item>IS95B</item>
+        <item>IS95A</item>
      </string-array>
     <string-array name="mvno_type_entries">
         <item>Niciuna</item>
         <item>SPN</item>
         <item>IMSI</item>
         <item>GID</item>
+        <item>ICCID</item>
      </string-array>
     <string-array name="app_install_location_entries">
         <item>Spaţiu de stocare internă</item>
