--- a/Romanian/main/Settings.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/plurals.xml
@@ -12,6 +12,14 @@
         <item quantity="other">Mai aveți de parcurs %1$d pași pentru a deveni dezvoltator.</item>
         <item quantity="one">Mai aveți de parcurs %1$d pas pentru a deveni dezvoltator.</item>
      </plurals>
+    <plurals name="dlg_remove_locales_title">
+        <item quantity="other">Eliminați limbile selectate?</item>
+        <item quantity="one">Eliminați limba selectată?</item>
+    </plurals>
+    <plurals name="security_settings_fingerprint_preference_summary">
+        <item quantity="other">%1$d amprente setate</item>
+        <item quantity="one">%1$d amprentă setată</item>
+    </plurals>
     <plurals name="lockpassword_password_requires_letters">
         <item quantity="other">Parola trebuie să conţină cel puţin %d litere.</item>
         <item quantity="one">Parola trebuie să conţină cel puţin 1 literă.</item>
@@ -40,13 +48,102 @@
         <item quantity="other">Codul PIN pentru cartela SIM este incorect. V-au mai rămas %d încercări.</item>
         <item quantity="one">Codul PIN pentru cartela SIM este incorect. V-a mai rămas %d încercare, după care va trebui să contactați operatorul pentru a vă debloca dispozitivul.</item>
      </plurals>
+    <plurals name="uri_permissions_text">
+        <item quantity="other">%d elemente</item>
+        <item quantity="one">1 element</item>
+    </plurals>
+    <plurals name="accessibilty_autoclick_preference_subtitle_extremely_short_delay">
+        <item quantity="other">Întârziere extrem de scurtă (%1$d ms)</item>
+        <item quantity="one">Întârziere extrem de scurtă (%1$d ms)</item>
+    </plurals>
+    <plurals name="accessibilty_autoclick_preference_subtitle_very_short_delay">
+        <item quantity="other">Întârziere foarte scurtă (%1$d ms)</item>
+        <item quantity="one">Întârziere foarte scurtă (%1$d ms)</item>
+    </plurals>
+    <plurals name="accessibilty_autoclick_preference_subtitle_short_delay">
+        <item quantity="other">Întârziere scurtă (%1$d ms)</item>
+        <item quantity="one">Întârziere scurtă (%1$d ms)</item>
+    </plurals>
+    <plurals name="accessibilty_autoclick_preference_subtitle_long_delay">
+        <item quantity="other">Întârziere lungă (%1$d ms)</item>
+        <item quantity="one">Întârziere lungă (%1$d ms)</item>
+    </plurals>
+    <plurals name="accessibilty_autoclick_preference_subtitle_very_long_delay">
+        <item quantity="other">Întârziere foarte lungă (%1$d ms)</item>
+        <item quantity="one">Întârziere foarte lungă (%1$d ms)</item>
+    </plurals>
+    <plurals name="print_settings_title">
+        <item quantity="other">%d sarcini de printare</item>
+        <item quantity="one">1 sarcină de printare</item>
+    </plurals>
+    <plurals name="ssl_ca_cert_dialog_title">
+        <item quantity="other">Setați ca de încredere sau eliminați certificatele</item>
+        <item quantity="one">Setați ca de încredere sau eliminați certificatul</item>
+    </plurals>
+    <plurals name="ssl_ca_cert_info_message_device_owner">
+        <item quantity="other">"%s a instalat autorizații de certificate pe telefonul dumneavoastră, care le pot permite monitorizarea activității în rețea, inclusiv e-mailuri, aplicații și site-uri securizate.
+
+Pentru mai multe informații despre aceste certificate, contactați administratorul."</item>
+        <item quantity="one">"%s a instalat o autorizație de certificat pe telefon, care îi poate permite să monitorizeze activitatea în rețea, inclusiv e-mailurile, aplicațiile și site-urile securizate.
+
+Pentru mai multe informații despre acest certificat, contactați administratorul."</item>
+    </plurals>
+    <plurals name="ssl_ca_cert_info_message">
+        <item quantity="other">"%s a instalat autorizații de certificate pentru profilul de servici, care le pot permite monitorizarea activității în rețea, inclusiv e-mailuri, aplicații și site-uri securizatehas installed certificate authorities for your work profile, which may allow them to monitor work network activity, including emails, apps, and secure websites.
+
+Pentru mai multe informații despre aceste certificate, contactați administratorul."</item>
+        <item quantity="one">"%s a instalat o autorizație de certificat pentru profilul de servici, care îi poate permite să monitorizeze activitatea în rețea, inclusiv e-mailurile, aplicațiile și site-urile securizate.
+
+Pentru mai multe informații despre acest certificat, contactați administratorul."</item>
+    </plurals>
+    <plurals name="ssl_ca_cert_settings_button">
+        <item quantity="other">Verificați certificatele</item>
+        <item quantity="one">Verificați certificatul</item>
+    </plurals>
     <plurals name="manage_notification_access_summary_nonzero">
         <item quantity="other">%d aplicații pot citi notificările</item>
         <item quantity="one">%d aplicație poate citi notificările</item>
      </plurals>
-    <plurals name="manage_condition_providers_summary_nonzero">
-        <item quantity="other">%d aplicații furnizează condiții</item>
-        <item quantity="one">%d aplicație furnizează condiții</item>
+    <plurals name="zen_mode_summary_alarms_only_by_minute">
+        <item quantity="other">Modifică la alarme pentru doar %1$d minute (până la %2$s)</item>
+        <item quantity="one">Modifică la alarme pentru doar un minut până la %2$s</item>
+    </plurals>
+    <plurals name="zen_mode_summary_alarms_only_by_hour">
+        <item quantity="other">Modifică la alarme pentru doar %1$d ore până la %2$s</item>
+        <item quantity="one">la alarme pentru doar o oră până la %2$s</item>
+    </plurals>
+    <plurals name="permissions_summary">
+        <item quantity="other">%d permisiuni acordate</item>
+        <item quantity="one">%d permisiune acordată</item>
+    </plurals>
+    <plurals name="runtime_permissions_summary">
+        <item quantity="other">%1$d din %2$d permisiuni acordate</item>
+        <item quantity="one">%1$d din %2$d permisiuni acordată</item>
+    </plurals>
+    <plurals name="runtime_permissions_additional_count">
+        <item quantity="other">%d permisiuni suplimentare</item>
+        <item quantity="one">%d permisiune suplimentară</item>
+    </plurals>
+    <plurals name="domain_urls_apps_summary">
+        <item quantity="other">%d aplicații pot deschide linkurile suportate</item>
+        <item quantity="zero">Nicio aplicație nu poate deschide niciun link suportat</item>
+        <item quantity="one">O aplicație poate deschide linkurile sale suportate</item>
+    </plurals>
+    <plurals name="high_power_count">
+        <item quantity="other">%d aplicații au permisiunea de ignorare a optimizării acumulatorului</item>
+        <item quantity="one">1 aplicație are permisiunea de ignorare a optimizării acumulatorului</item>
+    </plurals>
+    <plurals name="memory_usage_apps_summary">
+        <item quantity="other">%1$d aplicații au utilizat memoria în ultimele %2$s</item>
+        <item quantity="one">1 aplicație a utilizat memoria în ultima %2$s</item>
+    </plurals>
+    <plurals name="notification_summary">
+        <item quantity="other">%d aplicații blocate de la trimitere</item>
+        <item quantity="one">%d aplicație blocată de la trimitere</item>
+    </plurals>
+    <plurals name="data_saver_unrestricted_summary">
+        <item quantity="other">%1$d aplicații au permisiunea de utilizare nerestricționată a datelor când Economisirea datelor este activă</item>
+        <item quantity="one">1 aplicație are permisiunea de utilizare nerestricționată a datelor când Economisirea datelor este activă</item>
     </plurals>
     <plurals name="connected_devices_number">
         <item quantity="other">%d dispozitive</item>
